# Object_tracker

./: .gitignore  LICENSE  Makefile  README.md  app.py  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
Object_Tracker/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
scripts/: download_sample_video.py
src/: __init__.py  pipeline.py
src/analytics/: __init__.py  counter.py  heatmap.py  speed.py  trajectory.py
src/detector/: __init__.py  yolo.py
src/tracker/: __init__.py  byte_tracker.py  kalman_filter.py  matching.py
src/visualization/: __init__.py  draw.py
tests/: test_tracker.py
